<?xml version="1.0"?>
<package>
  <name>nao_behaviour</name>
  <version>0.0.1</version>
  <description>The nao_behaviour package</description>


  <maintainer email="tavu@todo.todo">tavu</maintainer>
  <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib</build_depend>
<!--     <build_depend>move_base_msgs</build_depend> -->
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    
<!--     <run_depend>diagnostic_msgs</run_depend> -->
<!--     <run_depend>dynamic_reconfigure</run_depend> -->
<!--     <run_depend>geometry_msgs</run_depend> -->
<!--     <run_depend>move_base_msgs</run_depend> -->
<!--     <run_depend>actionlib_msgs</run_depend> -->
<!--     <run_depend>humanoid_nav_msgs</run_depend> -->
    <run_depend>rospy</run_depend>
<!--     <run_depend>std_msgs</run_depend> -->
<!--     <run_depend>std_srvs</run_depend> -->
    <export>
    </export>
</package>
